--- a/styleme.css
+++ b/styleme.css
@@ -1,24 +1,24 @@
   
 body{
-    color: rgb(248, 241, 241);
-    background-color: rgb(74, 75, 71);
+    color: rgb(248, 248, 248);
+    background-color: rgb(74, 75, 73);
 }
-h1{
+h1,h2{
     font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(235, 186, 186);
+    color: rgb(94, 161, 7);
     font-size: 40px;
 }
 h2{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: rgb(235, 186, 186);
-    font-size: 20px;
+    font-size: 25px;
 }
 p{
-    font-size: 15px;
+    font-size: 17px;
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-style: italic
 }
 .imdb{
     color: rgb(236, 24, 24);
     font-weight: bold;
+}
+.intro{
+    color: rgb(132, 49, 228);
 }
