--- a/grannypie/recipe.css
+++ b/grannypie/recipe.css
@@ -10,6 +10,7 @@ body{
 
 .heading{
     color: #A4A400;
+    padding: 5pt;
     background-color: #F0F0F0;
     text-decoration: underline;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -33,17 +34,18 @@ footer{
     margin-top: 10pt;
     text-align: right;
 }
-.comments{
+.usercomments{
     margin: 20pt;
-    background-color:rgb(248, 248, 20) ;
+    font-style: italic;
+}
+.comments{
+    background-color:rgb(238, 238, 138) ;
 }
 .question{
-    margin: 20pt;
-    background-color:rgb(248, 248, 11) ;
+    background-color:rgb(238, 238, 138) ;
 }
 .interest{
-    margin: 20pt;
-    background-color:rgb(252, 252, 19) ;
+    background-color:rgb(238, 238, 138) ;
 }
 .abbrevaration{
     text-decoration: underline;
@@ -59,3 +61,6 @@ footer{
 .abbrevaration:hover{
     display:inline;
 }
+
+
+
