--- a/journal/layout.css
+++ b/journal/layout.css
@@ -56,7 +56,7 @@ p>img:hover{
 aside{
     width: 25%;
     float: left;
-    position:  relative;
+    overflow: auto;
 }
 aside>div{
 	background-color: #A8F0F0;
@@ -67,5 +67,6 @@ aside>div{
     color: #009097;
 }
 a{
-    color: #009097; 
+    color: #009097;
+	
 }
