--- a/moviereview/movie.css
+++ b/moviereview/movie.css
@@ -2,41 +2,125 @@ body{
     background-image: url("./background.png");
     background-repeat: repeat;
 }
-h1{
-   
-    font-size: 24pt;
-    font-weight: bold;
-    text-shadow: 3px 3px #999999;
-    text-align: center;
+
+footer{
+    position: fixed;
+    text-align: right;
+    bottom: 0px;
+    right: 10px;
+    opacity: 0.5;
 }
+
 .header{
     background-image: url("./bannerbg.png");
     background-repeat: repeat-x;
-
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
+.header>img{
+    margin: 0px auto;
+}
+
 #container{
     margin-top: 70px;
     font-family: Verdana, Tahoma, sans-serif;
     font-size: 8pt;
 }
-.overview{
-    position: relative;
-    float: right;
-    box-sizing: border-box;
+#container>h1{
+    font-size: 24pt;
+    font-weight: bold;
+    text-shadow: 3px 3px #999999;
+    text-align: center;
 }
+
 dl{
-    position: absolute;
-    right: 0;
-    top: 580px;
-    height: auto;
-    width: 230px;
-    background-color: rgb(23, 187, 132);
+    margin: 10pt;
+    font-family: Arial, sans-serif;
+}
+ dt{
+    font-weight: bold;
+    margin-top: 10pt;
+}
+ dd ul{
+    list-style: none;
+    padding: 10px;
+    margin-left: 0px;
+    padding-left: 0px;
+}
+
+.sidebar{
+    border: 4px solid grey;
+    border-radius: 20px;
+    max-width: 800px;
+    margin: 0px auto;
+    overflow: auto;
+    position: relative;
+}
+aside{
+    float: right;
+    max-width: 250px;
+    background-color: #A2B964;
+    height: 100%;
+}
+.sidebar>p{
+    background-color: #A2B964;
+    padding: 5px;
+    text-align: center;
+    float: inline-end;
+    margin: 0px;
+    width: 100%;
     box-sizing: border-box;
 }
 
-.layout{
-    display: grid;
-    grid-template-columns: auto;
-    margin: auto;
-    
+section{
+    max-width: 550px;
+}
+section header{
+    width: 100%;
+    background-image: url("./rbg.png");
+    background-repeat: repeat-x;
+}
+section header img{
+    vertical-align: top;
+}
+
+.rating{
+    font-size: 48pt;
+    font-weight: bold;
+    color: red;
+}
+
+.column{
+    width: 47%;
+    margin-left: 2%;
+    box-sizing: border-box;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.written>p{
+    overflow: auto;
+}
+.written>p:first-child{
+    font-weight: bold;
+    background-color: #E8DC9B;
+    border: 2px solid grey;
+    border-radius: 10px;
+    padding: 8px;
+}
+.written>p:first-child img{
+    float: left;
+    margin: 5px;
+}
+.written>p>span{
+    font-style: italic;
+}
+
+p>img{
+    float: left;
 }
