--- a/HTMLForm/style.css
+++ b/HTMLForm/style.css
@@ -2,6 +2,7 @@ body{
     background-color: white;
     margin: 10px;
     padding: 10px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 h1,h2,h3{
     text-align: center;
@@ -14,9 +15,69 @@ img{
 }
 label{
     display: block;
+    font-size: 16px;
 }
-input[type="text"] {
+input[type="text"],input[type="number"],input[type="email"],input[type="datetime"],select {
     font-weight: bold;
-    width: 40px;
+    width: 50%;
+    margin: 10px auto;
+    border: 2px solid rgb(180, 176, 176);
+    box-shadow: 8px snow;
+    border-radius:10px;
+    box-sizing: border-box;
+    padding: 10px;
     }
+
+.wrapper1{
+    overflow: auto;
+    
+}
+.wrap1{
+    display: inline-block;
+    float: left;
+    width: 30%;
+    margin: auto;
+    padding: 10px;
+}
+.wrap{
+    display: inline-block;
+    width: 45%;
+}
+
+.radioclass{
+    margin-bottom: 10px;
+}
+.radioclass>label{
+    display: inline;
+    padding: 10px;
+}
+
+input[type="submit"]{
+    border: 2px solid rgb(128, 123, 123);
+    box-shadow: 8px snow;
+    border-radius:20px;
+    display: block;
+    font-size: 25pt;
+    background-color: greenyellow;
+    align-content: center;
+    margin: auto;
+    color: red;
+}
+input:focus:invalid:required{
+    border: 2px solid red;
+}
+footer{
+    
+    position: fixed;
+    right: 10px;
+    bottom: 2px;
+}
+textarea{
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 10pt;
+}
+legend{
+    color: rgb(16, 130, 145);
+    font-weight: bold;
+}
     
