update html form

--- a/HTMLForm/style.css
+++ b/HTMLForm/style.css
@@ -17,7 +17,7 @@ label{
     display: block;
     font-size: 16px;
 }
-input[type="text"],input[type="number"],input[type="email"],input[type="datetime"],select {
+input[type="text"], [type="number"], [type="email"], [type="datetime"],select {
     font-weight: bold;
     width: 50%;
     margin: 10px auto;
