--- a/HTMLForm/style.css
+++ b/HTMLForm/style.css
@@ -17,7 +17,7 @@ label{
     display: block;
     font-size: 16px;
 }
-input[type="text"], [type="number"], [type="email"], [type="datetime"],select {
+.textType,select {
     font-weight: bold;
     width: 50%;
     margin: 10px auto;
@@ -52,7 +52,7 @@ input[type="text"], [type="number"], [type="email"], [type="datetime"],select {
     padding: 10px;
 }
 
-input[type="submit"]{
+.submitButton{
     border: 2px solid rgb(128, 123, 123);
     box-shadow: 8px snow;
     border-radius:20px;
